# ped-hunter

./: .gitignore  PED-Hunter.spec  README.md  pyproject.toml
data/catalog/: aliases.json  attachments.json  crafting.json  resources.json  weapons.json
docs/: catalog-source-research.md
src/ped_hunter/: __init__.py  __main__.py  app.py  catalog.py  cli.py  parser.py  storage.py
tests/: test_catalog.py  test_loadouts.py  test_parser.py  test_resume_default.py
tools/: pyinstaller_entry.py  pyinstaller_tcl_runtime.py  sync_legacy_data.py
