[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ped-hunter"
version = "0.3.16"
description = "Free, local-first Entropia Universe profit intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "suttonwilliamd"}]
keywords = ["entropia", "loot", "analytics", "tracker", "desktop"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
]

[project.scripts]
ped-hunter = "ped_hunter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
